<resources>
    <string name="app_name">What is this</string>
    <string name="hello_world">Hello World!</string>
    <string name="action_settings">Settings</string>
    <string name="bee">Bee</string>
    <string name="bird">Bird</string>
    <string name="cat">Cat</string>
    <string name="cow">Cow</string>
    <string name="dog">Dog</string>
    <string name="elephant">Elephant</string>
    <string name="horse">Horse</string>
    <string name="lion">Lion</string>
    <string name="pig">Pig</string>
    <string name="sheep">Sheep</string>
    <string name="answer">Answer</string>
</resources>
