<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="518dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="33dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/text_color"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/imvAnimal"
            android:layout_width="@dimen/image"
            android:layout_height="@dimen/image"
            android:layout_gravity="center"
            app:srcCompat="@drawable/bee" />

        <RadioGroup
            android:id="@+id/radAnswer"
            android:layout_width="wrap_content"
            android:layout_height="244dp"
            android:layout_gravity="center_horizontal">

            <RadioButton
                android:id="@+id/rad1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cow"
                android:textColor="@color/text_color" />

            <RadioButton
                android:id="@+id/rad2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/horse"
                android:textColor="@color/text_color" />

            <RadioButton
                android:id="@+id/rad3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pig"
                android:textColor="@color/text_color" />

            <RadioButton
                android:id="@+id/rad4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sheep"
                android:textColor="@color/text_color" />

        </RadioGroup>

        <Button
            android:id="@+id/btanswer"
            android:onClick="ClickAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer"
            android:textColor="@color/text_color" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>